integrate intro guides in Support popup for logged-in users and on future user-friendly V3 landing page. Move actual site-specific contents out of js and into html snippet. Adjust padding to better utilize available space in popup after squeezing in guides. Prevent content overlap with Support/About/Status buttons.
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@5083 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/assets/css/V3/nav.css
+++ b/mig/assets/css/V3/nav.css
@@ -424,6 +424,17 @@
     background: url(/images/icons/seafile_icon_white.svg) center center no-repeat;
 }
 
+.quick-support .fa-seafile {
+    display: block;
+    height: 94px;
+}
+@media (max-width: 1000px) {
+    .quick-support .fa-seafile {
+        height: 54px;
+    }
+}
+
+
 
 .hidden {
     display: none;
@@ -660,7 +671,7 @@ button.avatar-link:active {
 }
 
 #aboutInfo .container, #supportInfo .container {
-    padding: 15% 10% 1% 10%;
+    padding: 10% 10% 1% 10%;
     overflow-x: hidden;
     overflow-y: auto;
     height: 100%;
